Reduciendo el parrafo de pie de pagina

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="contenedor-footer">
             <img src="imagenes/pie.svg" class="img-pie" alt="" srcset="">
             <div class="pie">
-                <p>&#169 Copyright - Andres Daniel Gomez De La Cruz - 2022.</p>
+                <p>&#169 Copyright - Andres Daniel Gomez - 2022.</p>
             </div>
         </div>
     </footer>
