Re-organizado las carpetas

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Encriptador</title>
 </head>
@@ -16,7 +16,7 @@
     <header>
         <div class="encabezado">
             <div class="logo">
-                <img src="imagenes/alura.png" alt="">
+                <img src="img/alura.png" alt="">
             </div>
             <div class="titulo">
                 <h1>Encriptador De Texto </h1>
@@ -45,13 +45,13 @@
     </main>
     <footer>
         <div class="contenedor-footer">
-            <img src="imagenes/pie.svg" class="img-pie" alt="" srcset="">
+            <img src="img/pie.svg" class="img-pie" alt="" srcset="">
             <div class="pie">
                 <p>&#169 Copyright - Andres Daniel Gomez - 2022.</p>
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
